quack.output
Grammar

    0 $accept: start $end

    1 $@1: %empty

    2 start: class_declarations $@1 statement_list

    3 class_declarations: %empty

    4 $@2: %empty

    5 class_declarations: class_declaration $@2 class_declarations

    6 class_declaration: class_signature class_body

    7 $@3: %empty

    8 $@4: %empty

    9 class_signature: CLASS IDENTIFIER $@3 formal_args $@4 extends

   10 extends: %empty
   11        | EXTENDS IDENTIFIER

   12 formal_args: LPAREN RPAREN
   13            | LPAREN formal_arg_list RPAREN

   14 formal_arg_list: formal_arg
   15                | formal_arg_list COMMA formal_arg

   16 formal_arg: IDENTIFIER COLON IDENTIFIER

   17 $@5: %empty

   18 $@6: %empty

   19 class_body: LBRACE $@5 statement_list $@6 method_list RBRACE

   20 method_list: %empty

   21 $@7: %empty

   22 method_list: method_list $@7 method

   23 $@8: %empty

   24 $@9: %empty

   25 method: DEFINE IDENTIFIER formal_args $@8 returntype $@9 statement_block

   26 returntype: %empty
   27           | COLON IDENTIFIER

   28 $@10: %empty

   29 statement_block: LBRACE $@10 statement_list RBRACE

   30 statement_list: %empty
   31               | statement_list statement

   32 $@11: %empty

   33 $@12: %empty

   34 statement: IF r_exp $@11 statement_block $@12 else_list

   35 $@13: %empty

   36 statement: WHILE r_exp $@13 statement_block
   37          | RETURN return_stmt SEMICOLON

   38 $@14: %empty

   39 statement: l_exp index_id $@14 ASSIGNMENT r_exp SEMICOLON
   40          | r_exp SEMICOLON

   41 return_stmt: %empty
   42            | r_exp

   43 index_id: %empty
   44         | COLON IDENTIFIER

   45 else_list: %empty

   46 $@15: %empty

   47 else_list: elseiflist ELSE $@15 statement_block

   48 elseiflist: %empty

   49 $@16: %empty

   50 $@17: %empty

   51 elseiflist: ELSEIF r_exp $@16 statement_block $@17 elseiflist

   52 l_exp: r_exp DOT IDENTIFIER
   53      | IDENTIFIER

   54 r_exp: literal
   55      | l_exp actual_args

   56 $@18: %empty

   57 r_exp: r_exp PLUS $@18 r_exp

   58 $@19: %empty

   59 r_exp: r_exp MINUS $@19 r_exp

   60 $@20: %empty

   61 r_exp: r_exp MULTIPLY $@20 r_exp

   62 $@21: %empty

   63 r_exp: r_exp DIVIDE $@21 r_exp
   64      | LPAREN r_exp RPAREN

   65 $@22: %empty

   66 r_exp: r_exp OPERATOR_EQUAL $@22 r_exp

   67 $@23: %empty

   68 r_exp: r_exp OPERATOR_LESS_EQUAL $@23 r_exp

   69 $@24: %empty

   70 r_exp: r_exp OPERATOR_LESS $@24 r_exp

   71 $@25: %empty

   72 r_exp: r_exp OPERATOR_GREATER_EQUAL $@25 r_exp

   73 $@26: %empty

   74 r_exp: r_exp OPERATOR_GREATER $@26 r_exp

   75 $@27: %empty

   76 r_exp: r_exp OPERATOR_AND $@27 r_exp

   77 $@28: %empty

   78 r_exp: r_exp OPERATOR_OR $@28 r_exp
   79      | OPERATOR_NOT r_exp
   80      | l_exp

   81 actual_args: LPAREN RPAREN

   82 $@29: %empty

   83 actual_args: LPAREN $@29 actual_arg_list RPAREN

   84 actual_arg_list: r_exp
   85                | actual_arg_list COMMA r_exp

   86 literal: int_lit
   87        | str_lit
   88        | bool_lit
   89        | nothing_lit

   90 int_lit: DIGIT_VALUE
   91        | MINUS DIGIT_VALUE

   92 str_lit: STRING_LITERAL
   93        | BAD_STRING_LITERAL

   94 bool_lit: FALSE_VALUE
   95         | TRUE_VALUE

   96 nothing_lit: NOTHING_VALUE


Terminals, with rules where they appear

$end (0) 0
error (256)
CLASS (258) 9
DEFINE (259) 25
EXTENDS (260) 11
IF (261) 34
ELSEIF (262) 51
ELSE (263) 47
WHILE (264) 36
RETURN (265) 37
COLON (266) 16 27 44
ASSIGNMENT (267) 39
SEMICOLON (268) 37 39 40
DOT (269) 52
COMMA (270) 15 85
PLUS (271) 57
MINUS (272) 59 91
MULTIPLY (273) 61
DIVIDE (274) 63
LPAREN (275) 12 13 64 81 83
RPAREN (276) 12 13 64 81 83
LBRACE (277) 19 29
RBRACE (278) 19 29
OPERATOR_AND (279) 76
OPERATOR_OR (280) 78
OPERATOR_NOT (281) 79
OPERATOR_EQUAL (282) 66
OPERATOR_LESS_EQUAL (283) 68
OPERATOR_LESS (284) 70
OPERATOR_GREATER_EQUAL (285) 72
OPERATOR_GREATER (286) 74
IDENTIFIER (287) 9 11 16 25 27 44 52 53
FALSE_VALUE (288) 94
TRUE_VALUE (289) 95
NOTHING_VALUE (290) 96
DIGIT_VALUE (291) 90 91
STRING_LITERAL (292) 92
BAD_STRING_LITERAL (293) 93


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
start (40)
    on left: 2, on right: 0
$@1 (41)
    on left: 1, on right: 2
class_declarations (42)
    on left: 3 5, on right: 2 5
$@2 (43)
    on left: 4, on right: 5
class_declaration (44)
    on left: 6, on right: 5
class_signature (45)
    on left: 9, on right: 6
$@3 (46)
    on left: 7, on right: 9
$@4 (47)
    on left: 8, on right: 9
extends (48)
    on left: 10 11, on right: 9
formal_args (49)
    on left: 12 13, on right: 9 25
formal_arg_list (50)
    on left: 14 15, on right: 13 15
formal_arg (51)
    on left: 16, on right: 14 15
class_body (52)
    on left: 19, on right: 6
$@5 (53)
    on left: 17, on right: 19
$@6 (54)
    on left: 18, on right: 19
method_list (55)
    on left: 20 22, on right: 19 22
$@7 (56)
    on left: 21, on right: 22
method (57)
    on left: 25, on right: 22
$@8 (58)
    on left: 23, on right: 25
$@9 (59)
    on left: 24, on right: 25
returntype (60)
    on left: 26 27, on right: 25
statement_block (61)
    on left: 29, on right: 25 34 36 47 51
$@10 (62)
    on left: 28, on right: 29
statement_list (63)
    on left: 30 31, on right: 2 19 29 31
statement (64)
    on left: 34 36 37 39 40, on right: 31
$@11 (65)
    on left: 32, on right: 34
$@12 (66)
    on left: 33, on right: 34
$@13 (67)
    on left: 35, on right: 36
$@14 (68)
    on left: 38, on right: 39
return_stmt (69)
    on left: 41 42, on right: 37
index_id (70)
    on left: 43 44, on right: 39
else_list (71)
    on left: 45 47, on right: 34
$@15 (72)
    on left: 46, on right: 47
elseiflist (73)
    on left: 48 51, on right: 47 51
$@16 (74)
    on left: 49, on right: 51
$@17 (75)
    on left: 50, on right: 51
l_exp (76)
    on left: 52 53, on right: 39 55 80
r_exp (77)
    on left: 54 55 57 59 61 63 64 66 68 70 72 74 76 78 79 80, on right:
    34 36 39 40 42 51 52 57 59 61 63 64 66 68 70 72 74 76 78 79 84
    85
$@18 (78)
    on left: 56, on right: 57
$@19 (79)
    on left: 58, on right: 59
$@20 (80)
    on left: 60, on right: 61
$@21 (81)
    on left: 62, on right: 63
$@22 (82)
    on left: 65, on right: 66
$@23 (83)
    on left: 67, on right: 68
$@24 (84)
    on left: 69, on right: 70
$@25 (85)
    on left: 71, on right: 72
$@26 (86)
    on left: 73, on right: 74
$@27 (87)
    on left: 75, on right: 76
$@28 (88)
    on left: 77, on right: 78
actual_args (89)
    on left: 81 83, on right: 55
$@29 (90)
    on left: 82, on right: 83
actual_arg_list (91)
    on left: 84 85, on right: 83 85
literal (92)
    on left: 86 87 88 89, on right: 54
int_lit (93)
    on left: 90 91, on right: 86
str_lit (94)
    on left: 92 93, on right: 87
bool_lit (95)
    on left: 94 95, on right: 88
nothing_lit (96)
    on left: 96, on right: 89


State 0

    0 $accept: . start $end

    CLASS  shift, and go to state 1

    $default  reduce using rule 3 (class_declarations)

    start               go to state 2
    class_declarations  go to state 3
    class_declaration   go to state 4
    class_signature     go to state 5


State 1

    9 class_signature: CLASS . IDENTIFIER $@3 formal_args $@4 extends

    IDENTIFIER  shift, and go to state 6


State 2

    0 $accept: start . $end

    $end  shift, and go to state 7


State 3

    2 start: class_declarations . $@1 statement_list

    $default  reduce using rule 1 ($@1)

    $@1  go to state 8


State 4

    5 class_declarations: class_declaration . $@2 class_declarations

    $default  reduce using rule 4 ($@2)

    $@2  go to state 9


State 5

    6 class_declaration: class_signature . class_body

    LBRACE  shift, and go to state 10

    class_body  go to state 11


State 6

    9 class_signature: CLASS IDENTIFIER . $@3 formal_args $@4 extends

    $default  reduce using rule 7 ($@3)

    $@3  go to state 12


State 7

    0 $accept: start $end .

    $default  accept


State 8

    2 start: class_declarations $@1 . statement_list

    $default  reduce using rule 30 (statement_list)

    statement_list  go to state 13


State 9

    5 class_declarations: class_declaration $@2 . class_declarations

    CLASS  shift, and go to state 1

    $default  reduce using rule 3 (class_declarations)

    class_declarations  go to state 14
    class_declaration   go to state 4
    class_signature     go to state 5


State 10

   19 class_body: LBRACE . $@5 statement_list $@6 method_list RBRACE

    $default  reduce using rule 17 ($@5)

    $@5  go to state 15


State 11

    6 class_declaration: class_signature class_body .

    $default  reduce using rule 6 (class_declaration)


State 12

    9 class_signature: CLASS IDENTIFIER $@3 . formal_args $@4 extends

    LPAREN  shift, and go to state 16

    formal_args  go to state 17


State 13

    2 start: class_declarations $@1 statement_list .
   31 statement_list: statement_list . statement

    IF                  shift, and go to state 18
    WHILE               shift, and go to state 19
    RETURN              shift, and go to state 20
    MINUS               shift, and go to state 21
    LPAREN              shift, and go to state 22
    OPERATOR_NOT        shift, and go to state 23
    IDENTIFIER          shift, and go to state 24
    FALSE_VALUE         shift, and go to state 25
    TRUE_VALUE          shift, and go to state 26
    NOTHING_VALUE       shift, and go to state 27
    DIGIT_VALUE         shift, and go to state 28
    STRING_LITERAL      shift, and go to state 29
    BAD_STRING_LITERAL  shift, and go to state 30

    $default  reduce using rule 2 (start)

    statement    go to state 31
    l_exp        go to state 32
    r_exp        go to state 33
    literal      go to state 34
    int_lit      go to state 35
    str_lit      go to state 36
    bool_lit     go to state 37
    nothing_lit  go to state 38


State 14

    5 class_declarations: class_declaration $@2 class_declarations .

    $default  reduce using rule 5 (class_declarations)


State 15

   19 class_body: LBRACE $@5 . statement_list $@6 method_list RBRACE

    $default  reduce using rule 30 (statement_list)

    statement_list  go to state 39


State 16

   12 formal_args: LPAREN . RPAREN
   13            | LPAREN . formal_arg_list RPAREN

    RPAREN      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41

    formal_arg_list  go to state 42
    formal_arg       go to state 43


State 17

    9 class_signature: CLASS IDENTIFIER $@3 formal_args . $@4 extends

    $default  reduce using rule 8 ($@4)

    $@4  go to state 44


State 18

   34 statement: IF . r_exp $@11 statement_block $@12 else_list

    MINUS               shift, and go to state 21
    LPAREN              shift, and go to state 22
    OPERATOR_NOT        shift, and go to state 23
    IDENTIFIER          shift, and go to state 24
    FALSE_VALUE         shift, and go to state 25
    TRUE_VALUE          shift, and go to state 26
    NOTHING_VALUE       shift, and go to state 27
    DIGIT_VALUE         shift, and go to state 28
    STRING_LITERAL      shift, and go to state 29
    BAD_STRING_LITERAL  shift, and go to state 30

    l_exp        go to state 45
    r_exp        go to state 46
    literal      go to state 34
    int_lit      go to state 35
    str_lit      go to state 36
    bool_lit     go to state 37
    nothing_lit  go to state 38


State 19

   36 statement: WHILE . r_exp $@13 statement_block

    MINUS               shift, and go to state 21
    LPAREN              shift, and go to state 22
    OPERATOR_NOT        shift, and go to state 23
    IDENTIFIER          shift, and go to state 24
    FALSE_VALUE         shift, and go to state 25
    TRUE_VALUE          shift, and go to state 26
    NOTHING_VALUE       shift, and go to state 27
    DIGIT_VALUE         shift, and go to state 28
    STRING_LITERAL      shift, and go to state 29
    BAD_STRING_LITERAL  shift, and go to state 30

    l_exp        go to state 45
    r_exp        go to state 47
    literal      go to state 34
    int_lit      go to state 35
    str_lit      go to state 36
    bool_lit     go to state 37
    nothing_lit  go to state 38


State 20

   37 statement: RETURN . return_stmt SEMICOLON

    MINUS               shift, and go to state 21
    LPAREN              shift, and go to state 22
    OPERATOR_NOT        shift, and go to state 23
    IDENTIFIER          shift, and go to state 24
    FALSE_VALUE         shift, and go to state 25
    TRUE_VALUE          shift, and go to state 26
    NOTHING_VALUE       shift, and go to state 27
    DIGIT_VALUE         shift, and go to state 28
    STRING_LITERAL      shift, and go to state 29
    BAD_STRING_LITERAL  shift, and go to state 30

    $default  reduce using rule 41 (return_stmt)

    return_stmt  go to state 48
    l_exp        go to state 45
    r_exp        go to state 49
    literal      go to state 34
    int_lit      go to state 35
    str_lit      go to state 36
    bool_lit     go to state 37
    nothing_lit  go to state 38


State 21

   91 int_lit: MINUS . DIGIT_VALUE

    DIGIT_VALUE  shift, and go to state 50


State 22

   64 r_exp: LPAREN . r_exp RPAREN

    MINUS               shift, and go to state 21
    LPAREN              shift, and go to state 22
    OPERATOR_NOT        shift, and go to state 23
    IDENTIFIER          shift, and go to state 24
    FALSE_VALUE         shift, and go to state 25
    TRUE_VALUE          shift, and go to state 26
    NOTHING_VALUE       shift, and go to state 27
    DIGIT_VALUE         shift, and go to state 28
    STRING_LITERAL      shift, and go to state 29
    BAD_STRING_LITERAL  shift, and go to state 30

    l_exp        go to state 45
    r_exp        go to state 51
    literal      go to state 34
    int_lit      go to state 35
    str_lit      go to state 36
    bool_lit     go to state 37
    nothing_lit  go to state 38


State 23

   79 r_exp: OPERATOR_NOT . r_exp

    MINUS               shift, and go to state 21
    LPAREN              shift, and go to state 22
    OPERATOR_NOT        shift, and go to state 23
    IDENTIFIER          shift, and go to state 24
    FALSE_VALUE         shift, and go to state 25
    TRUE_VALUE          shift, and go to state 26
    NOTHING_VALUE       shift, and go to state 27
    DIGIT_VALUE         shift, and go to state 28
    STRING_LITERAL      shift, and go to state 29
    BAD_STRING_LITERAL  shift, and go to state 30

    l_exp        go to state 45
    r_exp        go to state 52
    literal      go to state 34
    int_lit      go to state 35
    str_lit      go to state 36
    bool_lit     go to state 37
    nothing_lit  go to state 38


State 24

   53 l_exp: IDENTIFIER .

    $default  reduce using rule 53 (l_exp)


State 25

   94 bool_lit: FALSE_VALUE .

    $default  reduce using rule 94 (bool_lit)


State 26

   95 bool_lit: TRUE_VALUE .

    $default  reduce using rule 95 (bool_lit)


State 27

   96 nothing_lit: NOTHING_VALUE .

    $default  reduce using rule 96 (nothing_lit)


State 28

   90 int_lit: DIGIT_VALUE .

    $default  reduce using rule 90 (int_lit)


State 29

   92 str_lit: STRING_LITERAL .

    $default  reduce using rule 92 (str_lit)


State 30

   93 str_lit: BAD_STRING_LITERAL .

    $default  reduce using rule 93 (str_lit)


State 31

   31 statement_list: statement_list statement .

    $default  reduce using rule 31 (statement_list)


State 32

   39 statement: l_exp . index_id $@14 ASSIGNMENT r_exp SEMICOLON
   55 r_exp: l_exp . actual_args
   80      | l_exp .

    COLON   shift, and go to state 53
    LPAREN  shift, and go to state 54

    ASSIGNMENT  reduce using rule 43 (index_id)
    $default    reduce using rule 80 (r_exp)

    index_id     go to state 55
    actual_args  go to state 56


State 33

   40 statement: r_exp . SEMICOLON
   52 l_exp: r_exp . DOT IDENTIFIER
   57 r_exp: r_exp . PLUS $@18 r_exp
   59      | r_exp . MINUS $@19 r_exp
   61      | r_exp . MULTIPLY $@20 r_exp
   63      | r_exp . DIVIDE $@21 r_exp
   66      | r_exp . OPERATOR_EQUAL $@22 r_exp
   68      | r_exp . OPERATOR_LESS_EQUAL $@23 r_exp
   70      | r_exp . OPERATOR_LESS $@24 r_exp
   72      | r_exp . OPERATOR_GREATER_EQUAL $@25 r_exp
   74      | r_exp . OPERATOR_GREATER $@26 r_exp
   76      | r_exp . OPERATOR_AND $@27 r_exp
   78      | r_exp . OPERATOR_OR $@28 r_exp

    SEMICOLON               shift, and go to state 57
    DOT                     shift, and go to state 58
    PLUS                    shift, and go to state 59
    MINUS                   shift, and go to state 60
    MULTIPLY                shift, and go to state 61
    DIVIDE                  shift, and go to state 62
    OPERATOR_AND            shift, and go to state 63
    OPERATOR_OR             shift, and go to state 64
    OPERATOR_EQUAL          shift, and go to state 65
    OPERATOR_LESS_EQUAL     shift, and go to state 66
    OPERATOR_LESS           shift, and go to state 67
    OPERATOR_GREATER_EQUAL  shift, and go to state 68
    OPERATOR_GREATER        shift, and go to state 69


State 34

   54 r_exp: literal .

    $default  reduce using rule 54 (r_exp)


State 35

   86 literal: int_lit .

    $default  reduce using rule 86 (literal)


State 36

   87 literal: str_lit .

    $default  reduce using rule 87 (literal)


State 37

   88 literal: bool_lit .

    $default  reduce using rule 88 (literal)


State 38

   89 literal: nothing_lit .

    $default  reduce using rule 89 (literal)


State 39

   19 class_body: LBRACE $@5 statement_list . $@6 method_list RBRACE
   31 statement_list: statement_list . statement

    IF                  shift, and go to state 18
    WHILE               shift, and go to state 19
    RETURN              shift, and go to state 20
    MINUS               shift, and go to state 21
    LPAREN              shift, and go to state 22
    OPERATOR_NOT        shift, and go to state 23
    IDENTIFIER          shift, and go to state 24
    FALSE_VALUE         shift, and go to state 25
    TRUE_VALUE          shift, and go to state 26
    NOTHING_VALUE       shift, and go to state 27
    DIGIT_VALUE         shift, and go to state 28
    STRING_LITERAL      shift, and go to state 29
    BAD_STRING_LITERAL  shift, and go to state 30

    $default  reduce using rule 18 ($@6)

    $@6          go to state 70
    statement    go to state 31
    l_exp        go to state 32
    r_exp        go to state 33
    literal      go to state 34
    int_lit      go to state 35
    str_lit      go to state 36
    bool_lit     go to state 37
    nothing_lit  go to state 38


State 40

   12 formal_args: LPAREN RPAREN .

    $default  reduce using rule 12 (formal_args)


State 41

   16 formal_arg: IDENTIFIER . COLON IDENTIFIER

    COLON  shift, and go to state 71


State 42

   13 formal_args: LPAREN formal_arg_list . RPAREN
   15 formal_arg_list: formal_arg_list . COMMA formal_arg

    COMMA   shift, and go to state 72
    RPAREN  shift, and go to state 73


State 43

   14 formal_arg_list: formal_arg .

    $default  reduce using rule 14 (formal_arg_list)


State 44

    9 class_signature: CLASS IDENTIFIER $@3 formal_args $@4 . extends

    EXTENDS  shift, and go to state 74

    $default  reduce using rule 10 (extends)

    extends  go to state 75


State 45

   55 r_exp: l_exp . actual_args
   80      | l_exp .

    LPAREN  shift, and go to state 54

    $default  reduce using rule 80 (r_exp)

    actual_args  go to state 56


State 46

   34 statement: IF r_exp . $@11 statement_block $@12 else_list
   52 l_exp: r_exp . DOT IDENTIFIER
   57 r_exp: r_exp . PLUS $@18 r_exp
   59      | r_exp . MINUS $@19 r_exp
   61      | r_exp . MULTIPLY $@20 r_exp
   63      | r_exp . DIVIDE $@21 r_exp
   66      | r_exp . OPERATOR_EQUAL $@22 r_exp
   68      | r_exp . OPERATOR_LESS_EQUAL $@23 r_exp
   70      | r_exp . OPERATOR_LESS $@24 r_exp
   72      | r_exp . OPERATOR_GREATER_EQUAL $@25 r_exp
   74      | r_exp . OPERATOR_GREATER $@26 r_exp
   76      | r_exp . OPERATOR_AND $@27 r_exp
   78      | r_exp . OPERATOR_OR $@28 r_exp

    DOT                     shift, and go to state 58
    PLUS                    shift, and go to state 59
    MINUS                   shift, and go to state 60
    MULTIPLY                shift, and go to state 61
    DIVIDE                  shift, and go to state 62
    OPERATOR_AND            shift, and go to state 63
    OPERATOR_OR             shift, and go to state 64
    OPERATOR_EQUAL          shift, and go to state 65
    OPERATOR_LESS_EQUAL     shift, and go to state 66
    OPERATOR_LESS           shift, and go to state 67
    OPERATOR_GREATER_EQUAL  shift, and go to state 68
    OPERATOR_GREATER        shift, and go to state 69

    $default  reduce using rule 32 ($@11)

    $@11  go to state 76


State 47

   36 statement: WHILE r_exp . $@13 statement_block
   52 l_exp: r_exp . DOT IDENTIFIER
   57 r_exp: r_exp . PLUS $@18 r_exp
   59      | r_exp . MINUS $@19 r_exp
   61      | r_exp . MULTIPLY $@20 r_exp
   63      | r_exp . DIVIDE $@21 r_exp
   66      | r_exp . OPERATOR_EQUAL $@22 r_exp
   68      | r_exp . OPERATOR_LESS_EQUAL $@23 r_exp
   70      | r_exp . OPERATOR_LESS $@24 r_exp
   72      | r_exp . OPERATOR_GREATER_EQUAL $@25 r_exp
   74      | r_exp . OPERATOR_GREATER $@26 r_exp
   76      | r_exp . OPERATOR_AND $@27 r_exp
   78      | r_exp . OPERATOR_OR $@28 r_exp

    DOT                     shift, and go to state 58
    PLUS                    shift, and go to state 59
    MINUS                   shift, and go to state 60
    MULTIPLY                shift, and go to state 61
    DIVIDE                  shift, and go to state 62
    OPERATOR_AND            shift, and go to state 63
    OPERATOR_OR             shift, and go to state 64
    OPERATOR_EQUAL          shift, and go to state 65
    OPERATOR_LESS_EQUAL     shift, and go to state 66
    OPERATOR_LESS           shift, and go to state 67
    OPERATOR_GREATER_EQUAL  shift, and go to state 68
    OPERATOR_GREATER        shift, and go to state 69

    $default  reduce using rule 35 ($@13)

    $@13  go to state 77


State 48

   37 statement: RETURN return_stmt . SEMICOLON

    SEMICOLON  shift, and go to state 78


State 49

   42 return_stmt: r_exp .
   52 l_exp: r_exp . DOT IDENTIFIER
   57 r_exp: r_exp . PLUS $@18 r_exp
   59      | r_exp . MINUS $@19 r_exp
   61      | r_exp . MULTIPLY $@20 r_exp
   63      | r_exp . DIVIDE $@21 r_exp
   66      | r_exp . OPERATOR_EQUAL $@22 r_exp
   68      | r_exp . OPERATOR_LESS_EQUAL $@23 r_exp
   70      | r_exp . OPERATOR_LESS $@24 r_exp
   72      | r_exp . OPERATOR_GREATER_EQUAL $@25 r_exp
   74      | r_exp . OPERATOR_GREATER $@26 r_exp
   76      | r_exp . OPERATOR_AND $@27 r_exp
   78      | r_exp . OPERATOR_OR $@28 r_exp

    DOT                     shift, and go to state 58
    PLUS                    shift, and go to state 59
    MINUS                   shift, and go to state 60
    MULTIPLY                shift, and go to state 61
    DIVIDE                  shift, and go to state 62
    OPERATOR_AND            shift, and go to state 63
    OPERATOR_OR             shift, and go to state 64
    OPERATOR_EQUAL          shift, and go to state 65
    OPERATOR_LESS_EQUAL     shift, and go to state 66
    OPERATOR_LESS           shift, and go to state 67
    OPERATOR_GREATER_EQUAL  shift, and go to state 68
    OPERATOR_GREATER        shift, and go to state 69

    $default  reduce using rule 42 (return_stmt)


State 50

   91 int_lit: MINUS DIGIT_VALUE .

    $default  reduce using rule 91 (int_lit)


State 51

   52 l_exp: r_exp . DOT IDENTIFIER
   57 r_exp: r_exp . PLUS $@18 r_exp
   59      | r_exp . MINUS $@19 r_exp
   61      | r_exp . MULTIPLY $@20 r_exp
   63      | r_exp . DIVIDE $@21 r_exp
   64      | LPAREN r_exp . RPAREN
   66      | r_exp . OPERATOR_EQUAL $@22 r_exp
   68      | r_exp . OPERATOR_LESS_EQUAL $@23 r_exp
   70      | r_exp . OPERATOR_LESS $@24 r_exp
   72      | r_exp . OPERATOR_GREATER_EQUAL $@25 r_exp
   74      | r_exp . OPERATOR_GREATER $@26 r_exp
   76      | r_exp . OPERATOR_AND $@27 r_exp
   78      | r_exp . OPERATOR_OR $@28 r_exp

    DOT                     shift, and go to state 58
    PLUS                    shift, and go to state 59
    MINUS                   shift, and go to state 60
    MULTIPLY                shift, and go to state 61
    DIVIDE                  shift, and go to state 62
    RPAREN                  shift, and go to state 79
    OPERATOR_AND            shift, and go to state 63
    OPERATOR_OR             shift, and go to state 64
    OPERATOR_EQUAL          shift, and go to state 65
    OPERATOR_LESS_EQUAL     shift, and go to state 66
    OPERATOR_LESS           shift, and go to state 67
    OPERATOR_GREATER_EQUAL  shift, and go to state 68
    OPERATOR_GREATER        shift, and go to state 69


State 52

   52 l_exp: r_exp . DOT IDENTIFIER
   57 r_exp: r_exp . PLUS $@18 r_exp
   59      | r_exp . MINUS $@19 r_exp
   61      | r_exp . MULTIPLY $@20 r_exp
   63      | r_exp . DIVIDE $@21 r_exp
   66      | r_exp . OPERATOR_EQUAL $@22 r_exp
   68      | r_exp . OPERATOR_LESS_EQUAL $@23 r_exp
   70      | r_exp . OPERATOR_LESS $@24 r_exp
   72      | r_exp . OPERATOR_GREATER_EQUAL $@25 r_exp
   74      | r_exp . OPERATOR_GREATER $@26 r_exp
   76      | r_exp . OPERATOR_AND $@27 r_exp
   78      | r_exp . OPERATOR_OR $@28 r_exp
   79      | OPERATOR_NOT r_exp .

    DOT                     shift, and go to state 58
    PLUS                    shift, and go to state 59
    MINUS                   shift, and go to state 60
    MULTIPLY                shift, and go to state 61
    DIVIDE                  shift, and go to state 62
    OPERATOR_EQUAL          shift, and go to state 65
    OPERATOR_LESS_EQUAL     shift, and go to state 66
    OPERATOR_LESS           shift, and go to state 67
    OPERATOR_GREATER_EQUAL  shift, and go to state 68
    OPERATOR_GREATER        shift, and go to state 69

    $default  reduce using rule 79 (r_exp)


State 53

   44 index_id: COLON . IDENTIFIER

    IDENTIFIER  shift, and go to state 80


State 54

   81 actual_args: LPAREN . RPAREN
   83            | LPAREN . $@29 actual_arg_list RPAREN

    RPAREN  shift, and go to state 81

    $default  reduce using rule 82 ($@29)

    $@29  go to state 82


State 55

   39 statement: l_exp index_id . $@14 ASSIGNMENT r_exp SEMICOLON

    $default  reduce using rule 38 ($@14)

    $@14  go to state 83


State 56

   55 r_exp: l_exp actual_args .

    $default  reduce using rule 55 (r_exp)


State 57

   40 statement: r_exp SEMICOLON .

    $default  reduce using rule 40 (statement)


State 58

   52 l_exp: r_exp DOT . IDENTIFIER

    IDENTIFIER  shift, and go to state 84


State 59

   57 r_exp: r_exp PLUS . $@18 r_exp

    $default  reduce using rule 56 ($@18)

    $@18  go to state 85


State 60

   59 r_exp: r_exp MINUS . $@19 r_exp

    $default  reduce using rule 58 ($@19)

    $@19  go to state 86


State 61

   61 r_exp: r_exp MULTIPLY . $@20 r_exp

    $default  reduce using rule 60 ($@20)

    $@20  go to state 87


State 62

   63 r_exp: r_exp DIVIDE . $@21 r_exp

    $default  reduce using rule 62 ($@21)

    $@21  go to state 88


State 63

   76 r_exp: r_exp OPERATOR_AND . $@27 r_exp

    $default  reduce using rule 75 ($@27)

    $@27  go to state 89


State 64

   78 r_exp: r_exp OPERATOR_OR . $@28 r_exp

    $default  reduce using rule 77 ($@28)

    $@28  go to state 90


State 65

   66 r_exp: r_exp OPERATOR_EQUAL . $@22 r_exp

    $default  reduce using rule 65 ($@22)

    $@22  go to state 91


State 66

   68 r_exp: r_exp OPERATOR_LESS_EQUAL . $@23 r_exp

    $default  reduce using rule 67 ($@23)

    $@23  go to state 92


State 67

   70 r_exp: r_exp OPERATOR_LESS . $@24 r_exp

    $default  reduce using rule 69 ($@24)

    $@24  go to state 93


State 68

   72 r_exp: r_exp OPERATOR_GREATER_EQUAL . $@25 r_exp

    $default  reduce using rule 71 ($@25)

    $@25  go to state 94


State 69

   74 r_exp: r_exp OPERATOR_GREATER . $@26 r_exp

    $default  reduce using rule 73 ($@26)

    $@26  go to state 95


State 70

   19 class_body: LBRACE $@5 statement_list $@6 . method_list RBRACE

    $default  reduce using rule 20 (method_list)

    method_list  go to state 96


State 71

   16 formal_arg: IDENTIFIER COLON . IDENTIFIER

    IDENTIFIER  shift, and go to state 97


State 72

   15 formal_arg_list: formal_arg_list COMMA . formal_arg

    IDENTIFIER  shift, and go to state 41

    formal_arg  go to state 98


State 73

   13 formal_args: LPAREN formal_arg_list RPAREN .

    $default  reduce using rule 13 (formal_args)


State 74

   11 extends: EXTENDS . IDENTIFIER

    IDENTIFIER  shift, and go to state 99


State 75

    9 class_signature: CLASS IDENTIFIER $@3 formal_args $@4 extends .

    $default  reduce using rule 9 (class_signature)


State 76

   34 statement: IF r_exp $@11 . statement_block $@12 else_list

    LBRACE  shift, and go to state 100

    statement_block  go to state 101


State 77

   36 statement: WHILE r_exp $@13 . statement_block

    LBRACE  shift, and go to state 100

    statement_block  go to state 102


State 78

   37 statement: RETURN return_stmt SEMICOLON .

    $default  reduce using rule 37 (statement)


State 79

   64 r_exp: LPAREN r_exp RPAREN .

    $default  reduce using rule 64 (r_exp)


State 80

   44 index_id: COLON IDENTIFIER .

    $default  reduce using rule 44 (index_id)


State 81

   81 actual_args: LPAREN RPAREN .

    $default  reduce using rule 81 (actual_args)


State 82

   83 actual_args: LPAREN $@29 . actual_arg_list RPAREN

    MINUS               shift, and go to state 21
    LPAREN              shift, and go to state 22
    OPERATOR_NOT        shift, and go to state 23
    IDENTIFIER          shift, and go to state 24
    FALSE_VALUE         shift, and go to state 25
    TRUE_VALUE          shift, and go to state 26
    NOTHING_VALUE       shift, and go to state 27
    DIGIT_VALUE         shift, and go to state 28
    STRING_LITERAL      shift, and go to state 29
    BAD_STRING_LITERAL  shift, and go to state 30

    l_exp            go to state 45
    r_exp            go to state 103
    actual_arg_list  go to state 104
    literal          go to state 34
    int_lit          go to state 35
    str_lit          go to state 36
    bool_lit         go to state 37
    nothing_lit      go to state 38


State 83

   39 statement: l_exp index_id $@14 . ASSIGNMENT r_exp SEMICOLON

    ASSIGNMENT  shift, and go to state 105


State 84

   52 l_exp: r_exp DOT IDENTIFIER .

    $default  reduce using rule 52 (l_exp)


State 85

   57 r_exp: r_exp PLUS $@18 . r_exp

    MINUS               shift, and go to state 21
    LPAREN              shift, and go to state 22
    OPERATOR_NOT        shift, and go to state 23
    IDENTIFIER          shift, and go to state 24
    FALSE_VALUE         shift, and go to state 25
    TRUE_VALUE          shift, and go to state 26
    NOTHING_VALUE       shift, and go to state 27
    DIGIT_VALUE         shift, and go to state 28
    STRING_LITERAL      shift, and go to state 29
    BAD_STRING_LITERAL  shift, and go to state 30
